# excel-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_REMEDIATION_PLAN.md  Capability_Assessment_Report.md  Comprehensive_Assessment_Report_new.md  Comprehensive_Project_Understanding.md  Discrepancy_Analysis_Report.md  E2E_QA_TEST_REPORT.md  FINAL_COMPREHENSIVE_ASSESSMENT_REPORT.md  GAP_REMEDIATION_EXECUTION_REPORT.md  GAP_REMEDIATION_PLAN.md  LICENSE  MASTER_EXECUTION_PLAN.md  PHASE_1_REMEDIATION_PLAN.md  Phase-0.md  Phase-3.md  Project_Architecture_Document.md  Project_Review.md  README.md  REALISTIC_TEST_EXECUTION_REPORT.md  Review_Report_Skill_and_Test.md  SKILL_TEST_REMEDIATION_PLAN.md  Test-plan.md  last_activity.md  oo8  opus-3.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  status_1.md  status_3.md  status_4.md  status_9.md  status_docs.md  status_final.md  status_new.md
.github/workflows/: ci.yml
docs/: prompt-2.md  prompts.md
excel-tools-skill/: .env.example  SKILL.md
excel-tools-skill/references/: troubleshooting.md  workflow-patterns.md
excel-tools-skill/scripts/: create_workbook.py
plan/: Phase-1.md  Phase-10.md  Phase-11.md  Phase-12.md  Phase-13.md  Phase-2.md  Phase-4.md  Phase-5.md  Phase-6.md  Phase-7.md  Phase-9.md  dpsk-2.md  oc.sh  opus-3.md  prompt-1.md  qwen-1.md  status_1.md  status_10.md  status_11.md  status_12.md  status_13.md  status_15.md  status_2.md  status_5.md  status_6.md  status_7.md  status_8.md  status_9.md  status_9_final.md
scripts/: fix_double_save.py  fix_double_save_remaining.py  fix_edit_session_inplace.py  fix_remaining_tools.py  fix_version_hash_access.py  generate_fixtures.py  generate_test_files.py
skills/excel-tools/: SKILL.md  requirements.txt
skills/excel-tools/assets/: template.xlsx  template_with_data.xlsx
skills/excel-tools/references/: tool-reference.md  troubleshooting.md  workflow-patterns.md
skills/excel-tools/scripts/: batch_process.py  create_workbook.py
src/excel_agent/: __init__.py
src/excel_agent/core/: __init__.py  agent.py  chunked_io.py  dependency.py  edit_session.py  locking.py  macro_handler.py  serializers.py  style_serializer.py  version_hash.py
src/excel_agent/governance/: __init__.py  audit_trail.py  token_manager.py
src/excel_agent/governance/schemas/: __init__.py  range_input.schema.json  style_spec.schema.json  token_request.schema.json  write_data.schema.json
src/excel_agent/sdk/: client.py
src/excel_agent/tools/: _tool_base.py
src/excel_agent/tools/cells/: __init__.py  xls_delete_range.py  xls_merge_cells.py  xls_unmerge_cells.py  xls_update_references.py
src/excel_agent/tools/formatting/: xls_format_range.py  xls_set_number_format.py
src/excel_agent/tools/formulas/: xls_copy_formula_down.py  xls_set_formula.py
src/excel_agent/tools/governance/: xls_approve_token.py  xls_clone_workbook.py  xls_dependency_report.py  xls_lock_status.py  xls_validate_workbook.py  xls_version_hash.py
src/excel_agent/tools/macros/: __init__.py  xls_has_macros.py  xls_inject_vba_project.py  xls_inspect_macros.py  xls_remove_macros.py  xls_validate_macro_safety.py
src/excel_agent/tools/objects/: xls_add_chart.py  xls_add_image.py  xls_add_table.py
src/excel_agent/tools/read/: xls_get_cell_style.py  xls_get_defined_names.py  xls_get_formula.py  xls_get_sheet_names.py  xls_get_table_info.py  xls_get_workbook_metadata.py  xls_read_range.py
src/excel_agent/tools/structure/: xls_add_sheet.py  xls_delete_columns.py  xls_delete_rows.py  xls_delete_sheet.py  xls_insert_columns.py  xls_insert_rows.py  xls_move_sheet.py  xls_rename_sheet.py
src/excel_agent/tools/write/: xls_create_from_template.py  xls_write_cell.py  xls_write_range.py
src/excel_agent/utils/: __init__.py  cli_helpers.py  exceptions.py  exit_codes.py  json_io.py
src/excel_agent_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
tests/core/: test_edit_session.py
tests/fixtures/: EdgeCases_Formulas_and_Links.xlsx  MacroTarget.xlsx  OTHERBOOK.XLSX  OfficeOps_Expenses_KPI.xlsx  circular_refs.xlsx  complex_formulas.xlsx  macros.xlsm  sample.xlsx  template.xltx
tests/integration/: __init__.py  test_cell_operations.py  test_clone_modify_workflow.py  test_export_workflow.py  test_realistic_office_workflow.py
tests/performance/: __init__.py
tests/property/: __init__.py  test_range_serializer.py
tests/unit/: __init__.py  test_agent.py  test_audit_trail.py  test_chunked_io.py  test_dependency.py  test_locking.py  test_merge_operations.py  test_serializers.py  test_style_serializer.py  test_token_manager.py  test_update_references.py  test_version_hash.py
tests/utils/: test_cli_helpers.py
